modelos/deployment-file.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-deployment
  name: nginx-deployment
  namespace: tux
spec:
  replicas: 10
  revisionHistoryLimits: 6
  selector:
    matchLabels:
      app: nginx-deployment
  strategy: {}
    type: RollingUpdate/Recreate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: nginx-deployment
    spec:
      containers:
        - image: nginx:1.16.0
          name: nginx
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            readinessProbe:
              exec:
                command:
                - curl
                - -f
                - http://localhost:80/
              initialDelaySeconds: 10
              periodSeconds: 10
              timeoutSeconds: 5
              failureThreshold: 3
              successThreshold: 1
            startupProbe:
              tcpSocket:
                port: 80 
          resources:
            limits:
              cpu: 0.5
              memory: 100Mi
            requests:
              cpu: 0.3
              memory: 20Mi
