modelos/secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-secret
spec:
  containers:
  - name: nginx-secret
    image: nginx
---------------------------------------------------------------------
apiVersion: v1
kind: Pod
metadata:
  name: dockerhub-container
spec:
  containers:
  - name: dockerhub-container
    image: carandre/linuxtips-redis:1.0
  imagePullSecrets:
  - name: dockerhub-secret
---------------------------------------------------------------------
apiVersion: v1
kind: Pod
metadata:
  name: nginx-secret
  labels:
    app: nginx
spec:
  containers:
  - name: nginx-secret
    image: nginx
    ports:
    - containerPort: 80
    - containerPort: 443
    volumeMounts:
    - name: nginx-config-volume
      mountPath: /etc/nginx/nginx.conf
      subPath: nginx.conf
    - name: nginx-tls
      mountPath: /etc/nginx/tls
  volumes:
  - name: nginx-config-volume
    configMap:
      name: nginx-config
  - name: nginx-tls
    secret:
      secretName: nginx-tls
      items:
      - key: tls.crt
        path: certificado.crt
      - key: tls.key
        path: chave-privada.key
