modelos/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    app: nginx
    env: dev
  ports:
  - port: 80
    name: http
    targetPort: 80
  type: ClusterIP

  ----------------------------------

  apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx
spec:
  port:
    - port: 9113
      name: metric
  selector:  
    app: nginx
-------------------------------------
apiVersion: v1
kind: Service
metadata:
  name: tux-senhas
  labels:
    app: tux-senhas
spec:
  selector:
    app: tux-senhas
  ports:
  - protocol: TCP
    port: 5000
    name: tcp-app
    targetPort: 5000
  type: ClusterIP
